--- a/Client_3D/Include/imgui.ini
+++ b/Client_3D/Include/imgui.ini
@@ -9,7 +9,12 @@ Size=825,377
 Collapsed=0
 
 [Window][Test]
-Pos=898,25
-Size=360,646
+Pos=956,40
+Size=305,646
+Collapsed=0
+
+[Window][MaJaSinInNa]
+Pos=853,65
+Size=342,624
 Collapsed=0
 
