--- a/Engine/Include/Engine.vcxproj
+++ b/Engine/Include/Engine.vcxproj
@@ -229,6 +229,7 @@
     <ClInclude Include="RefCount.h" />
     <ClInclude Include="Render\BlendState.h" />
     <ClInclude Include="Render\DepthStancilState.h" />
+    <ClInclude Include="Render\MultiRenderTarget.h" />
     <ClInclude Include="Render\RenderManager.h" />
     <ClInclude Include="Render\RenderState.h" />
     <ClInclude Include="Render\RenderTarget.h" />
@@ -293,6 +294,7 @@
     <ClCompile Include="RefCount.cpp" />
     <ClCompile Include="Render\BlendState.cpp" />
     <ClCompile Include="Render\DepthStancilState.cpp" />
+    <ClCompile Include="Render\MultiRenderTarget.cpp" />
     <ClCompile Include="Render\RenderManager.cpp" />
     <ClCompile Include="Render\RenderState.cpp" />
     <ClCompile Include="Render\RenderTarget.cpp" />
