--- a/Engine/Include/Engine.vcxproj
+++ b/Engine/Include/Engine.vcxproj
@@ -203,6 +203,7 @@
     <ClInclude Include="BineryWriter.h" />
     <ClInclude Include="CollsionManager.h" />
     <ClInclude Include="Component\Animation2D_Com.h" />
+    <ClInclude Include="Component\Animation3D_Com.h" />
     <ClInclude Include="Component\Bar_Com.h" />
     <ClInclude Include="Component\FreeCamera_Com.h" />
     <ClInclude Include="Component\IconSlot_Com.h" />
@@ -270,6 +271,7 @@
     <ClCompile Include="BineryWriter.cpp" />
     <ClCompile Include="CollsionManager.cpp" />
     <ClCompile Include="Component\Animation2D_Com.cpp" />
+    <ClCompile Include="Component\Animation3D_Com.cpp" />
     <ClCompile Include="Component\Bar_Com.cpp" />
     <ClCompile Include="Component\FreeCamera_Com.cpp" />
     <ClCompile Include="Component\IconSlot_Com.cpp" />
