--- a/Engine/Include/Engine.vcxproj.filters
+++ b/Engine/Include/Engine.vcxproj.filters
@@ -223,6 +223,9 @@
     <Filter Include="Core\10. Resource\05. FBXLoader">
       <UniqueIdentifier>{658465d8-edfb-4e71-8bff-2086d606db5c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Core\08. Object\Component\BaseComponent\13. Animation3D">
+      <UniqueIdentifier>{8fd1eeb0-b04f-4b90-8463-86590cd4c601}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -420,6 +423,9 @@
     <ClInclude Include="Resource\FBXLoader.h">
       <Filter>Core\10. Resource\05. FBXLoader</Filter>
     </ClInclude>
+    <ClInclude Include="Component\Animation3D_Com.h">
+      <Filter>Core\08. Object\Component\BaseComponent\13. Animation3D</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Copy.bat">
@@ -609,6 +615,9 @@
     </ClCompile>
     <ClCompile Include="Resource\FBXLoader.cpp">
       <Filter>Core\10. Resource\05. FBXLoader</Filter>
+    </ClCompile>
+    <ClCompile Include="Component\Animation3D_Com.cpp">
+      <Filter>Core\08. Object\Component\BaseComponent\13. Animation3D</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
