--- a/Engine/Include/Engine.vcxproj
+++ b/Engine/Include/Engine.vcxproj
@@ -210,6 +210,8 @@
     <ClInclude Include="Component\FreeCamera_Com.h" />
     <ClInclude Include="Component\IconSlot_Com.h" />
     <ClInclude Include="Component\Light_Com.h" />
+    <ClInclude Include="Component\NavigationMesh.h" />
+    <ClInclude Include="Component\SkyBox_Com.h" />
     <ClInclude Include="Component\Text_Com.h" />
     <ClInclude Include="Component\UIBar_Com.h" />
     <ClInclude Include="Component\Button_Com.h" />
@@ -238,6 +240,7 @@
     <ClInclude Include="GUIManager.h" />
     <ClInclude Include="KeyInput.h" />
     <ClInclude Include="Macro.h" />
+    <ClInclude Include="NavigationManager.h" />
     <ClInclude Include="PathManager.h" />
     <ClInclude Include="RefCount.h" />
     <ClInclude Include="Render\BlendState.h" />
@@ -280,6 +283,8 @@
     <ClCompile Include="Component\FreeCamera_Com.cpp" />
     <ClCompile Include="Component\IconSlot_Com.cpp" />
     <ClCompile Include="Component\Light_Com.cpp" />
+    <ClCompile Include="Component\NavigationMesh.cpp" />
+    <ClCompile Include="Component\SkyBox_Com.cpp" />
     <ClCompile Include="Component\Text_Com.cpp" />
     <ClCompile Include="Component\UIBar_Com.cpp" />
     <ClCompile Include="Component\Button_Com.cpp" />
@@ -307,6 +312,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GUIManager.cpp" />
     <ClCompile Include="KeyInput.cpp" />
+    <ClCompile Include="NavigationManager.cpp" />
     <ClCompile Include="PathManager.cpp" />
     <ClCompile Include="RefCount.cpp" />
     <ClCompile Include="Render\BlendState.cpp" />
@@ -465,6 +471,13 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="..\Bin\Shader\SkyBoxShader.fx">
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      </EntryPointName>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
+      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="..\Bin\Shader\Standard.fx">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Effect</ShaderType>
