--- a/Client_3D/Include/Client_3D.vcxproj
+++ b/Client_3D/Include/Client_3D.vcxproj
@@ -214,6 +214,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>ImGui.lib;libfbxsdk-md64.lib;Mathlib64.lib;Engine64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <EntryPointSymbol>wWinMainCRTStartup</EntryPointSymbol>
     </Link>
     <PreBuildEvent>
       <Command>
